--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,8 @@
 #header{
+    position: fixed;
+    width: 100%;
+    top: 0;
+    left: 0;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -7,7 +11,6 @@
 
 #header #navbar{
     text-decoration: none;
-    text-align: end;
 }
 
 #header #navbar li{
@@ -23,4 +26,11 @@
 #header #navbar a{
 
     text-decoration: none;
+}
+
+#social-link ul a{
+  display: block;
+  text-align: center;
+  padding: 16px;
+  text-decoration: none;
 }
